--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,6 +69,9 @@ unopay:
       21902075000138:
         from: 'no-reply@poupesaude.com.br'
         personalFrom: 'Poupe Saude'
+      24075280000165:
+        from: 'nao-responda@wingoo.com.br'
+        personalFrom: 'Clube Wingoo'
 soap:
   client:
     ssl:
