--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
         DEFAULT_VIEW_INCLUSION: true
     date-format: "yyyy-MM-dd'T'HH:mm:ssZ"
     write-dates-as-timestamps: false
+    serialization:
+      write-dates-as-timestamps: false
     time-zone: "UTC"
     serialization-inclusion: non_null
     indent_output: true
