--- a/build.gradle
+++ b/build.gradle
@@ -71,59 +71,59 @@ dependencies {
 	compile 'br.com.unopay:itau-autorizador-boletos:0.0.2'
 	compile 'br.com.wingoo:wingoo-user-client:0.0.21'
 	compile 'br.com.unopay:unopay-boot-commons:0.0.45'
-	compile 'io.springfox:springfox-swagger2:2.4.0'
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.springframework.boot:spring-boot-starter-actuator'
-	compile 'org.springframework.boot:spring-boot-starter-data-redis'
-	compile 'org.springframework.boot:spring-boot-starter-aop'
-	compile 'org.springframework.boot:spring-boot-starter-security'
-	compile 'org.springframework.security.oauth:spring-security-oauth2'
-	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compile 'org.springframework.hateoas:spring-hateoas'
+	compile 'io.springfox:springfox-swagger2:3.0.0'
+	compile 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+	compile 'org.springframework.boot:spring-boot-starter-actuator:2.5.5'
+	compile 'org.springframework.boot:spring-boot-starter-data-redis:2.5.5'
+	compile 'org.springframework.boot:spring-boot-starter-aop:2.5.5'
+	compile 'org.springframework.boot:spring-boot-starter-security:2.5.5'
+	compile 'org.springframework.security.oauth:spring-security-oauth2:2.5.1.RELEASE'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
+	compile 'org.springframework.hateoas:spring-hateoas:1.3.4'
 
-    compile 'org.springframework:spring-jms'
-    compile 'org.springframework:spring-oxm'
+    compile 'org.springframework:spring-jms:5.3.10'
+    compile 'org.springframework:spring-oxm:5.3.10'
 
-	compile 'com.google.guava:guava:21.0'
+	compile 'com.google.guava:guava:31.0.1-jre'
 
-	compile 'org.postgresql:postgresql:9.4-1201-jdbc41'
-	compile 'org.hsqldb:hsqldb'
-	compile "org.flywaydb:flyway-core:4.1.1"
-	compile "org.apache.commons:commons-lang3:3.6"
-	compile "org.springframework.boot:spring-boot-starter-mail"
-	compile "com.hubspot.jinjava:jinjava:2.1.12"
-	compile "org.springframework.boot:spring-boot-starter-amqp"
-	compile 'com.rabbitmq:amqp-client:4.0.0'
-	compile 'commons-io:commons-io:2.4'
-	compile 'com.amazonaws:aws-java-sdk-s3:1.11.109'
+	compile 'org.postgresql:postgresql:42.2.24.jre7'
+	compile 'org.hsqldb:hsqldb:2.6.0'
+	compile 'org.flywaydb:flyway-core:7.14.1'
+	compile 'org.apache.commons:commons-lang3:3.12.0'
+	compile 'org.springframework.boot:spring-boot-starter-mail:2.5.5'
+	compile 'com.hubspot.jinjava:jinjava:2.5.10'
+	compile 'org.springframework.boot:spring-boot-starter-amqp:2.5.5'
+	compile 'com.rabbitmq:amqp-client:5.13.1'
+	compile 'commons-io:commons-io:20030203.000550'
+	compile 'com.amazonaws:aws-java-sdk-s3:1.12.81'
 	compile "org.scala-lang:scala-library:2.12.0"
-	compile 'commons-fileupload:commons-fileupload:1.3.1'
-	compile 'org.jvnet.jaxb2_commons:jaxb2-basics-runtime:0.11.0'
-	compile 'com.sun.xml.ws:jaxws-rt:2.1.3'
-	compile 'org.quartz-scheduler:quartz:2.2.1'
-	compile 'org.quartz-scheduler:quartz-jobs:2.2.1'
+	compile 'commons-fileupload:commons-fileupload:1.4'
+	compile 'org.jvnet.jaxb2_commons:jaxb2-basics-runtime:1.11.1-PUBLISHED-BY-MISTAKE'
+	compile 'com.sun.xml.ws:jaxws-rt:3.0.1'
+	compile 'org.quartz-scheduler:quartz:2.3.2'
+	compile 'org.quartz-scheduler:quartz-jobs:2.3.2'
 	compile group: 'eu.payzen.sdk', name: 'payzen-ws-sdk', version: '1.3'
 	compile group: 'com.opencsv', name: 'opencsv', version: '3.10'
 	compile group: 'br.com.caelum.stella', name: 'caelum-stella-boleto', version: '2.1.2'
 	compile group: 'com.lowagie', name: 'itext', version: '2.1.7'
 
-	compileOnly 'org.projectlombok:lombok:1.16.18'
+	compileOnly 'org.projectlombok:lombok:1.18.20'
 
-	testCompile 'com.jayway.jsonpath:json-path:2.4.0'
-	testCompile "org.springframework.boot:spring-boot-starter-test"
-	testCompile "org.springframework.security:spring-security-test"
-	testCompile 'org.flywaydb.flyway-test-extensions:flyway-spring-test:4.0'
-	testCompile "org.codehaus.groovy:groovy:2.4.7"
-	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
-	testCompile 'org.spockframework:spock-spring:0.7-groovy-2.0'
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-	testRuntime "cglib:cglib-nodep:3.2.4"
-    testRuntime "org.objenesis:objenesis:2.5.1"
+	testCompile 'com.jayway.jsonpath:json-path:2.6.0'
+	testCompile 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+	testCompile 'org.springframework.security:spring-security-test:5.5.1'
+	testCompile 'org.flywaydb.flyway-test-extensions:flyway-spring-test:7.0.0'
+	testCompile 'org.codehaus.groovy:groovy:3.0.8'
+	testCompile 'org.spockframework:spock-core:2.0-groovy-3.0'
+	testCompile 'org.spockframework:spock-spring:2.0-groovy-3.0'
+    testCompile 'org.hamcrest:hamcrest-core:2.2'
+	testRuntime 'cglib:cglib-nodep:3.3.0'
+    testRuntime 'org.objenesis:objenesis:3.2'
 	testCompile 'br.com.six2six:fixture-factory:3.1.0'
-	testRuntime 'com.athaydes:spock-reports:1.2.7'
-	testCompile "org.scala-lang:scala-library:2.12.0"
-	testCompile 'org.scalatest:scalatest_2.12:3.2.0-SNAP10'
-	testCompile 'com.github.maiflai:gradle-scalatest:0.19'
+	testRuntime 'com.athaydes:spock-reports:2.1-groovy-3.0'
+	testCompile 'org.scala-lang:scala-library:2.13.6'
+	testCompile 'org.scalatest:scalatest_2.12:3.2.9'
+	testCompile 'com.github.maiflai:gradle-scalatest:0.31'
 }
 
 
